# mdapp

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/source/: api-reference.rst  conf.py  index.rst
src/mdapp/: __init__.py  _functions.py
tests/: test_mdapp.py
