[tool.poetry]
name = "MdApp"
version = "0.1.0"
description = "Python made up app to learn Github Pages"
authors = ["epulidonieves <epulido.nieves@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src/mdapp"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
flake8 = "^5.0.4"
coverage = "^6.4.4"
tox = "^3.26.0"
Sphinx = "^5.2.2"
sphinx-autodoc-typehints = "^1.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
