[tool.poetry]
name = "MdApp"
version = "0.1.0"
description = "Python app to learn and play with"
authors = ["epulidonieves <epulido.nieves@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
flake8 = [
    {version = "5.0.4", python = ">=3.7,<3.8"},
    {version = "^5.0.4", python = ">=3.8"}
]
coverage = "^6.4.4"
requests-mock = "^1.10.0"
tox = "^3.26.0"
Sphinx = [
    {version = "4.3.0", python = ">=3.7,<3.8"},
    {version = "^5.3.0", python = ">=3.8"}
]
sphinx-autodoc-typehints = [
    {version = "1.17.1", python = ">=3.7,<3.8"},
    {version = "^1.19.4", python = ">=3.8"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
